--- a/Home.html
+++ b/Home.html
@@ -1,12 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Employee Payroll</title>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;
+0,200;0,300;0,400;0,600;1,500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;600
+&display=swap" rel="stylesheet">
 </head>
+
 <body>
-    <header>Welcome To Employee Payroll System</header>
+    <header class="header-content header">
+        <div class="logo-content">
+            <img src="images/logo.png" alt="">
+            <div>
+                <span class="emp-text">
+                    Employee
+                </span><br>
+                <span class="emp-text emp-payroll">
+                    Payroll
+                </span>
+            </div>
+        </div>
+    </header>
 </body>
+
 </html>
