--- a/Home.html
+++ b/Home.html
@@ -27,6 +27,17 @@
             </div>
         </div>
     </header>
+    <div class="main-content">
+        <div class="header-content">
+            <div class="emp-detail-text">
+                Employee Details <div class="emp-count">10</div>
+            </div>
+            <a href="new_emp_payroll.html" class="add-button">
+                <img src="images/add-24px.svg" alt="">
+                Add User
+            </a>
+        </div>
+    </div>
 </body>
 
 </html>
