--- a/Home.html
+++ b/Home.html
@@ -40,6 +40,7 @@
     </div>
     <table id="display">
         <tr>
+            <th>Profile</th>
             <th>Name</th>
             <th>Gender</th>
             <th>Department</th>
