Storing the profile image in local storage

--- a/new_emp_payroll.html
+++ b/new_emp_payroll.html
@@ -37,7 +37,7 @@
                 <img id="image" src="images/avatar6.png" >
                 <input type="radio" id="profile" name="avatar"  value = "images/img_avatar.png">
                 <img id="image" src="images/img_avatar.png"> 
-                <input type="radio" id="profile" name="avatar" value ="images/img_avatar.png" >
+                <input type="radio" id="profile" name="avatar" value ="images/img_avatar2.png" >
                 <img id="image" src="images/img_avatar2.png" >
             </div><br>
             <div class="input-control">
